--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,3 +20,5 @@ jobs:
       run: yarn install && npm run build
     - name: Deploy static site to S3 bucket
       run: aws s3 sync ./dist/ s3://inventory.andresuchitra.com --delete
+    - name: Set as Statis site
+      run: aws s3 website s3://inventory.andresuchitra.com index.html --error-document error.html
