use put-bucket-acl

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,6 +21,6 @@ jobs:
     - name: Deploy static site to S3 bucket
       run: aws s3 sync ./dist/ s3://${{ secrets.AWS_BUCKET_NAME }} --delete
     - name: Grant All Users read access
-      run: aws s3api put-object-acl --bucket ${{ secrets.AWS_BUCKET_NAME }} --grant-full-control id="${{ secrets.AWS_ACCOUNT_ID }}" --grant-read uri=http://acs.amazonaws.com/groups/global/AllUsers
+      run: aws s3api put-bucket-acl --bucket ${{ secrets.AWS_BUCKET_NAME }} --grant-full-control id="${{ secrets.AWS_ACCOUNT_ID }}" --grant-read uri=http://acs.amazonaws.com/groups/global/AllUsers
     - name: Set as Static site
       run: aws s3 website s3://${{ secrets.AWS_BUCKET_NAME }}/ --index-document index.html --error-document error.html
